near-bindgen/compilation_tests/impl_generic.stderr
error: Impl type parameters are not supported for smart contracts.
  --> $DIR/impl_generic.rs:16:6
   |
16 | impl<'a, T: 'a + std::fmt::Display> Incrementer<T> {
   |      ^^

error: Could not compile `near-bindgen-tests`.
